# matlib

./: CMakeLists.txt  README.md
headers/: logging.h  vector.h
src/: matrix.cpp  vector.cpp
tests/: test_vector.cpp
